@@ -25,6 +25,8 @@ Other features
  * Show user's full name in report views (Matt Westcott)
  * Improve Wagtail admin page load performance by caching SVG icons sprite in localstorage (Coen van der Kamp)
  * Support SVG icons in ModelAdmin menu items (Scott Cranfill)
+ * Serve PDFs inline in the browser when accessed from the edit document view (Matt Westcott)
+ * Make document ``content-type`` and ``content-disposition`` configurable via ``WAGTAILDOCS_CONTENT_TYPES`` and ``WAGTAILDOCS_INLINE_CONTENT_TYPES`` (Matt Westcott)
 
 
 Bug fixes
